07-services/ingress.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress-controller
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "32Mi"
            cpu: "100m"
        args:
          - /nginx-ingress-controller
          - --configmap=${POD_NAMESPACE}/nginx-configuration
        ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  selector:
    app: nginx-ingress
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
